# cumulus-library-opioid

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
cumulus-library-opioid/opioid/: CodeBookOpioidOverDose.xlsx  opioid__define_sepsis.sql
cumulus_library_opioid/: counts.py  counts.sql  define_dx_sepsis.sql  define_dx_sud.sql  define_rx_naloxone.sql  manifest.toml  table_dx.sql  table_dx_sepsis.sql  table_lab.sql  table_rx.sql  table_study_period.sql  valueset.py  valueset_rx_buprenorphine.json  valueset_rx_naloxone.json  valueset_rx_opioid.json
cumulus_library_opioid/opioid/: count.py  count.sql  counts.py  define_dx.sql  define_dx_icd10.sql  define_lab.sql  define_rx.sql  define_rx_buprenorphine.sql  define_rx_opioid.sql  manifest.toml  table_dx.sql  table_dx_sepsis.sql  table_lab.sql  table_rx.sql  table_sepsis.sql  table_study_period.sql  valueset.py  valueset_dx_sud_substance_use_disorder.json  valueset_sepsis_icd10.json  valueset_sepsis_snomed.json  version.sql
cumulus_library_opioid/opioid/vocab/: backup_database.sh  bashfile.py  constants.py  create_database.sh  db.config  export_tsv.sh  generator.py  imfeelinglucky.sh  make.sh  make_all.sh  prepare.sh
cumulus_library_opioid/opioid/vocab/analyze/: analyze.sh  expand.sql
cumulus_library_opioid/opioid/vocab/generate/: file_bash.py  file_sql.py
cumulus_library_opioid/opioid/vocab/jaccard/: jaccard.py  jaccard.sh  jaccard_score.sql
cumulus_library_opioid/opioid/vocab/medrt/: medrt.py  medrt.sh
cumulus_library_opioid/reference_sql/: additional_rules_builder.sql  excluded_rules_builder.sql  rules_expansion_builder.sql  rxnorm_vocab_builder.sql  rxnorm_vsac_builder.sql  static_builder.sql
cumulus_library_opioid/vocab/: README.md  VSAC.md  additional_rules_builder.py  backup_all.sh  constants.py  create_database.sh  drop_all.sh  env_table_schema.sh  excluded_rules_builder.py  export_tsv_supplement.sh  imfeelinglucky.sh  jaccard.sh  make.sh  make_all.sh  make_opioid.sh  medrt.sh  missed.sql  prepare.sh  rules_expansion_builder.py  rxnorm_vocab_builder.py  rxnorm_vsac_builder.py  static_builder.py  umls.py  validate.sh  vocab_utils.py  vsac.py
cumulus_library_opioid/vocab/analyze/: analyze.sh  curate.sql  expand.sql  filter.sql  stats.sql  vsac.py
cumulus_library_opioid/vocab/common/expand_rules/: expand_rules.sql  expand_rules.tsv  opioid_classifier_rules.bnf
cumulus_library_opioid/vocab/common/keywords/: keywords-subset.filtered.tsv  keywords-subset.tsv  keywords.curated.filtered.tsv  keywords.curated.sql  keywords.curated_len_dist.tsv  keywords.filtered.tsv  keywords.keywords_len_dist.tsv  keywords.like.sql  keywords.like.tsv  keywords.sql  keywords.tsv
cumulus_library_opioid/vocab/common/logging/: indexes.sql  version.sql
cumulus_library_opioid/vocab/common/umls/: all_rxcui_str.sql  matt_compare.sql  umls_abbreviations.sql  umls_cui_rxcui.sql  umls_tty.tsv  umls_types.sql
cumulus_library_opioid/vocab/data/: bioportal.curated.tsv  cliniwiz_keywords.diff_orig.tsv  ucdavis.ordered_rxcui_str.tsv
cumulus_library_opioid/vocab/generate/: file_bash.py  file_sql.py
cumulus_library_opioid/vocab/jaccard/: jaccard.py  jaccard_drop.sql  jaccard_schema.sql  jaccard_score.sql
cumulus_library_opioid/vocab/medrt/: db.config  medrt.py  medrt.sh  medrt_rxcui.sql
cumulus_library_opioid/vocab/template_sql/: create_annotated_rxnconso.sql.jinja  create_excluded_rela_types.sql.jinja  create_excluded_rules.sql.jinja  create_expansion_rules_descriptions.sql.jinja  create_included_keywords.sql.jinja  create_keyword_annotated_table.sql.jinja  create_potential_rules.sql.jinja  create_search_rules_descriptions.sql.jinja  create_view_from_tables.sql.jinja  umls_iterate.sql.jinja
cumulus_library_opioid/vocab/validate/: opioid.falsepos_atc_non.tsv  opioid.falsepos_mdpartners_non.tsv  opioid.falsepos_medrt_non.tsv  opioid.missed_CancerLinQ.tsv  opioid.missed_RXCUI.tsv  opioid.missed_acep.tsv  opioid.missed_keywords.tsv  opioid.missed_ucdavis.tsv  validate_create.sql  validate_drop.sql
cumulus_library_opioid/vocab/validate/VSAC1000/: opioid.falsepos_CancerLinQ_non.tsv  opioid.falsepos_atc_non.tsv  opioid.falsepos_mdpartners_non.tsv  opioid.falsepos_medrt_non.tsv  opioid.missed_CancerLinQ.tsv  opioid.missed_RXCUI.tsv  opioid.missed_ecri.tsv  opioid.missed_impaq.tsv  opioid.missed_keywords.tsv  opioid.missed_mitre.tsv  opioid.missed_ucdavis.tsv
tests/: conftest.py  test_additional_rules_builder.py  test_excluded_rules.py  test_rxnorm_vocab_builder.py  test_rxnorm_vsac_builder.py  test_static_builder.py  test_umls.py  test_vsac.py
tests/test_data/: rxnconso.csv  rxnrel.csv  vsac_resp.json
tests/test_data/excluded_rules_tables/: included_rules.csv  potential_rules.csv
tests/test_data/umls_iteration/: README.md  mrconso_drugs.csv  mrrel_is_a.csv
(+18 files in other folders)
