[project]
name = "cumulus-library-opioid"
version = "1.0"
requires-python = ">= 3.10"
# If you need python libraries, add them here
dependencies = [
    "cumulus-library >= 2.2.0",
    "sqlfluff == 2.0.2",
    "xlrd",
    "openpyxl",
    "pandas"
]
# You can alter this to discuss your study specifics
description = "Opioid Overdose and Opioid Use Disorder (OUD)"
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Home = "https://smarthealthit.org/cumulus-a-universal-sidecar-for-a-smart-learning-healthcare-system/"
Documentation = "https://docs.smarthealthit.org/cumulus/"
# Change this source to reference your github URL
Source = "https://github.com/smart-on-fhir/cumulus-library-opioid"


[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
dev = [
    "ruff = 0.4.4",
    "pylint",    
]
test = [
    "pytest",    
]

[tool.flit.sdist]
include = ["LICENSE"]
